# ImagePlayer

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/liukun/imp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/liukun/imp/: DialogHelper.java  GlobalDef.java  ImageIO.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  dialog_settings.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/liukun/imp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
